--- a/x86_64/.config
+++ b/x86_64/.config
@@ -1,6 +1,6 @@
 # 设置固件大小:
-CONFIG_TARGET_KERNEL_PARTSIZE=20
-CONFIG_TARGET_ROOTFS_PARTSIZE=775
+CONFIG_TARGET_KERNEL_PARTSIZE=50
+CONFIG_TARGET_ROOTFS_PARTSIZE=750
 
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
@@ -33,8 +33,8 @@ CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_luci-app-accesscontrol=n
 CONFIG_PACKAGE_luci-app-acme=n
 CONFIG_PACKAGE_luci-app-adblock=n
-CONFIG_PACKAGE_luci-app-adbyby-plus=n
-CONFIG_PACKAGE_luci-app-adguardhome=n
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-advanced-reboot=n
 CONFIG_PACKAGE_luci-app-advancedsetting=n
 CONFIG_PACKAGE_luci-app-ahcp=n
@@ -43,7 +43,7 @@ CONFIG_PACKAGE_luci-app-airwhu=n
 CONFIG_PACKAGE_luci-app-aliddns=n
 CONFIG_PACKAGE_luci-app-amule=n
 CONFIG_PACKAGE_luci-app-appfilter=n
-CONFIG_PACKAGE_luci-app-aria2=n
+CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-arpbind=n
 CONFIG_PACKAGE_luci-app-autoipsetadder=n
 CONFIG_PACKAGE_luci-app-autoreboot=n
@@ -58,7 +58,7 @@ CONFIG_PACKAGE_luci-app-bmx7=n
 CONFIG_PACKAGE_luci-app-brook=n
 CONFIG_PACKAGE_luci-app-cd8021x=n
 CONFIG_PACKAGE_luci-app-chinadns=n
-CONFIG_PACKAGE_luci-app-cifs=n
+CONFIG_PACKAGE_luci-app-cifs=y
 CONFIG_PACKAGE_luci-app-cjdns=n
 CONFIG_PACKAGE_luci-app-clamav=n
 CONFIG_PACKAGE_luci-app-clash=n
@@ -69,7 +69,7 @@ CONFIG_PACKAGE_luci-app-cshark=n
 CONFIG_PACKAGE_luci-app-dcwapd=n
 CONFIG_PACKAGE_luci-app-ddns=n
 CONFIG_PACKAGE_luci-app-diag-core=n
-CONFIG_PACKAGE_luci-app-diskman=n
+CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
@@ -89,12 +89,12 @@ CONFIG_PACKAGE_luci-app-familycloud=n
 CONFIG_PACKAGE_luci-app-fileassistant=n
 CONFIG_PACKAGE_luci-app-filebrowser=n
 CONFIG_PACKAGE_luci-app-filerun=n
-CONFIG_PACKAGE_luci-app-filetransfer=n
+CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-freifunk-diagnostics=n
 CONFIG_PACKAGE_luci-app-freifunk-policyrouting=n
 CONFIG_PACKAGE_luci-app-freifunk-widgets=n
-CONFIG_PACKAGE_luci-app-frpc=n
+CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=n
 CONFIG_PACKAGE_luci-app-fwknopd=n
 CONFIG_PACKAGE_luci-app-gost=n
@@ -111,12 +111,12 @@ CONFIG_PACKAGE_luci-app-jd-dailybonus=n
 CONFIG_PACKAGE_luci-app-k3screenctrl=n
 CONFIG_PACKAGE_luci-app-kcptun=n
 CONFIG_PACKAGE_luci-app-kodexplorer=n
-CONFIG_PACKAGE_luci-app-koolproxyR=n
+CONFIG_PACKAGE_luci-app-koolproxyR=y
 CONFIG_PACKAGE_luci-app-ksmbd=n
 CONFIG_PACKAGE_luci-app-lxc=n
 CONFIG_PACKAGE_luci-app-mentohust=n
 CONFIG_PACKAGE_luci-app-meshwizard=n
-CONFIG_PACKAGE_luci-app-minidlna=n
+CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-mjpg-streamer=n
 CONFIG_PACKAGE_luci-app-music-remote-center=n
 CONFIG_PACKAGE_luci-app-mwan3=n
@@ -124,7 +124,7 @@ CONFIG_PACKAGE_luci-app-mwan3helper=n
 CONFIG_PACKAGE_luci-app-mwol=n
 CONFIG_PACKAGE_luci-app-n2n_v2=n
 CONFIG_PACKAGE_luci-app-naiveproxy=n
-CONFIG_PACKAGE_luci-app-netdata=n
+CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-nextdns=n
 CONFIG_PACKAGE_luci-app-nfs=n
 CONFIG_PACKAGE_luci-app-nft-qos=n
@@ -169,27 +169,27 @@ CONFIG_PACKAGE_luci-app-pppoe-server=n
 CONFIG_PACKAGE_luci-app-pptp-vpnserver-manyusers=n
 CONFIG_PACKAGE_luci-app-privoxy=n
 CONFIG_PACKAGE_luci-app-ps3netsrv=n
-CONFIG_PACKAGE_luci-app-qbittorrent=n
+CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-qos=n
 CONFIG_PACKAGE_luci-app-qosv4=n
 CONFIG_PACKAGE_luci-app-radicale=n
 CONFIG_PACKAGE_luci-app-radicale2=n
 CONFIG_PACKAGE_luci-app-ramfree=n
-CONFIG_PACKAGE_luci-app-rclone=n
-CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=n
-CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=n
+CONFIG_PACKAGE_luci-app-rclone=y
+CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
+CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils=y
 CONFIG_PACKAGE_luci-app-rosy-file-server=n
 CONFIG_PACKAGE_luci-app-rp-pppoe-server=n
 CONFIG_PACKAGE_luci-app-samba=n
 CONFIG_PACKAGE_luci-app-samba4=n
 CONFIG_PACKAGE_luci-app-scutclient=n
-CONFIG_PACKAGE_luci-app-serverchan=n
+CONFIG_PACKAGE_luci-app-serverchan=y
 CONFIG_PACKAGE_luci-app-shadowsocks-libev=n
 CONFIG_PACKAGE_luci-app-shairplay=n
 CONFIG_PACKAGE_luci-app-siitwizard=n
 CONFIG_PACKAGE_luci-app-simple-adblock=n
-CONFIG_PACKAGE_luci-app-smartdns=n
+CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-smstool=n
 CONFIG_PACKAGE_luci-app-snmpd=n
 CONFIG_PACKAGE_luci-app-softethervpn=n
@@ -201,11 +201,11 @@ CONFIG_PACKAGE_luci-app-squid=n
 CONFIG_PACKAGE_luci-app-ssocks=n
 CONFIG_PACKAGE_luci-app-ssr-mudb-server=n
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
 CONFIG_PACKAGE_luci-app-ssrserver-python=n
 CONFIG_PACKAGE_luci-app-statistics=n
@@ -226,11 +226,11 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_dnsforwarder=y
 CONFIG_PACKAGE_luci-app-udp2raw=n
 CONFIG_PACKAGE_luci-app-udpxy=n
 CONFIG_PACKAGE_luci-app-uhttpd=n
-CONFIG_PACKAGE_luci-app-unblockmusic=n
-CONFIG_UnblockNeteaseMusic_Go=n
-CONFIG_UnblockNeteaseMusic_NodeJS=n
-CONFIG_PACKAGE_luci-app-unblockneteasemusic=n
-CONFIG_PACKAGE_luci-app-unblockneteasemusic-go=n
+CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_UnblockNeteaseMusic_Go=y
+CONFIG_UnblockNeteaseMusic_NodeJS=y
+CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
+CONFIG_PACKAGE_luci-app-unblockneteasemusic-go=y
 CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=n
 CONFIG_PACKAGE_luci-app-unbound=n
 CONFIG_PACKAGE_luci-app-upnp=y
@@ -249,7 +249,7 @@ CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray=n
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=n
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=n
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Server=n
-CONFIG_PACKAGE_luci-app-watchcat=n
+CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-webadmin=n
 CONFIG_PACKAGE_luci-app-wifischedule=n
 CONFIG_PACKAGE_luci-app-wireguard=n
@@ -259,19 +259,28 @@ CONFIG_PACKAGE_luci-app-xlnetacc=n
 CONFIG_PACKAGE_luci-app-zerotier=n
 
 # Themes
-CONFIG_PACKAGE_luci-theme-argon=n
-CONFIG_PACKAGE_luci-theme-argon-dark-mod=n
-CONFIG_PACKAGE_luci-theme-argon-light-mod=n
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
+CONFIG_PACKAGE_luci-theme-argon-light-mod=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=n
 CONFIG_PACKAGE_luci-theme-edge=y
 CONFIG_PACKAGE_luci-theme-freifunk-generic=n
-CONFIG_PACKAGE_luci-theme-material=n
-CONFIG_PACKAGE_luci-theme-opentomato=n
-CONFIG_PACKAGE_luci-theme-openwrt=n
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-opentomato=y
+CONFIG_PACKAGE_luci-theme-openwrt=y
 
 
 # 其他需要安装的软件包:
+CONFIG_PACKAGE_vim-fuller=y
+CONFIG_PACKAGE_fish=y
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_zsh=y
+CONFIG_PACKAGE_rsync=y
+CONFIG_PACKAGE_rsyncd=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_curl=y
+
 
 CONFIG_PACKAGE_dnsmasq=n
 CONFIG_PACKAGE_dnsmasq-full=y
@@ -302,18 +311,18 @@ CONFIG_PACKAGE_tcping=n
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_autocore-x86=y
 CONFIG_PACKAGE_autosamba=y
-CONFIG_PACKAGE_fdisk=n
+CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_cfdisk=n
 CONFIG_PACKAGE_nano=n
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
-# CONFIG_PACKAGE_git=y
-# CONFIG_PACKAGE_git-http=y
+CONFIG_PACKAGE_git=y
+CONFIG_PACKAGE_git-http=y
 CONFIG_PACKAGE_docker-ce=n
 CONFIG_V2RAY_COMPRESS_UPX=n
 CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 # CONFIG_TOOLCHAINOPTS=y
-# CONFIG_GCC_USE_VERSION_9=n
+CONFIG_GCC_USE_VERSION_9=n
 CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_bc=n
 CONFIG_PACKAGE_ethtool=n
@@ -401,4 +410,4 @@ CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
 
 CONFIG_GRUB_BOOTOPTS="nomodeset"
-CONFIG_KERNEL_BUILD_USER="GaryPang"
+CONFIG_KERNEL_BUILD_USER="LoogCP"
